--- a/google-book-search/package.json
+++ b/google-book-search/package.json
@@ -20,10 +20,12 @@
         "nodemon": "^1.18.7"
     },
     "dependencies": {
-        "axios": "^0.18.0",
+        "axios": "^0.18.1",
+        "bootstrap": "^4.6.0",
         "express": "^4.16.3",
         "if-env": "^1.0.4",
-        "mongoose": "^5.3.16"
+        "mongoose": "^5.3.16",
+        "react-bootstrap": "^1.5.2"
     },
     "_id": "mern@1.0.0"
 }
