--- a/google-book-search/package.json
+++ b/google-book-search/package.json
@@ -22,10 +22,12 @@
     "dependencies": {
         "axios": "^0.18.1",
         "bootstrap": "^4.6.0",
+        "dotenv": "^8.2.0",
         "express": "^4.16.3",
         "if-env": "^1.0.4",
         "mongoose": "^5.3.16",
-        "react-bootstrap": "^1.5.2"
+        "react-bootstrap": "^1.5.2",
+        "react-router-dom": "^5.2.0"
     },
     "_id": "mern@1.0.0"
 }
